--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         cd dist
         git init
         git add -A
-        git config --global --add safe.directory /github/workspace
+        git config --global --add safe.directory /github/workspace/dist
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git commit -m 'deploy'
